@@ -1,72 +1,143 @@
 package com.project.softwave.auth.infrastructure.config;
-
+import com.project.softwave.auth.application.services.AutenticacaoService;
+import com.project.softwave.auth.infrastructure.security.AutenticacaoFilter;
+import com.project.softwave.auth.infrastructure.security.GerenciadorTokenJwt;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.CsrfConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
-
 @Configuration
-public class CorsConfig implements WebMvcConfigurer {
+@EnableWebSecurity
+@EnableMethodSecurity
+public class SecurityConfiguracao {
+    @Autowired
+    private AutenticacaoService autenticacaoService;
+    @Autowired
+    private GerenciadorTokenJwt gerenciadorTokenJwt;
+    @Autowired
+    private AutenticacaoEntryPoint autenticacaoEntryPoint;
+    private static final AntPathRequestMatcher[] URLS_PERMITIDAS = {
+            new AntPathRequestMatcher("/swagger-ui/**"),
+            new AntPathRequestMatcher("/swagger-ui.html"),
+            new AntPathRequestMatcher("/swagger-resources"),
+            new AntPathRequestMatcher("/swagger-resources/**"),
+            new AntPathRequestMatcher("/configuration/ui"),
+            new AntPathRequestMatcher("/configuration/security"),
+            new AntPathRequestMatcher("/v3/api-docs/**"),
+            new AntPathRequestMatcher("/api/public/**"),
+            new AntPathRequestMatcher("/auth/**"),
+            new AntPathRequestMatcher("/actuator/**"),
+            new AntPathRequestMatcher("/h2-console/**")
+    };
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http
+                .headers(headers -> headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable))
+                .cors(Customizer.withDefaults())
+                .csrf(CsrfConfigurer::disable)
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(URLS_PERMITIDAS).permitAll()
+                        .anyRequest().authenticated()
+                )
+                .exceptionHandling(handling -> handling
+                        .authenticationEntryPoint(autenticacaoEntryPoint))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        http.addFilterBefore(jwtAuthenticationFilterBean(), UsernamePasswordAuthenticationFilter.class);
+        return http.build();
+    }
+    @Bean
+    public AuthenticationManager authenticationManager(HttpSecurity http, PasswordEncoder passwordEncoder) throws Exception {
+        AuthenticationManagerBuilder authenticationManagerBuilder = http.getSharedObject(AuthenticationManagerBuilder.class);
+        authenticationManagerBuilder.authenticationProvider(new AutenticacaoProvider(autenticacaoService, passwordEncoder));
+        return authenticationManagerBuilder.build();
+    }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+    @Bean
+    public AutenticacaoFilter jwtAuthenticationFilterBean() {
+        return new AutenticacaoFilter(autenticacaoService, gerenciadorTokenJwt);
+    }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuracao = new CorsConfiguration();
 
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        // Lê origens permitidas do env CORS_ALLOWED_ORIGINS (formato: "http://a,http://b")
-        String allowedOriginsEnv = null;
-        List<String> allowedOrigins;
+        // Permite credenciais (cookies, headers de autenticação)
+        configuracao.setAllowCredentials(true);
 
-        if (allowedOriginsEnv != null && !allowedOriginsEnv.isBlank()) {
-            allowedOrigins = Arrays.stream(allowedOriginsEnv.split(","))
-                    .map(String::trim)
-                    .flatMap(orig -> {
-                        if (orig.endsWith(":80")) {
-                            // adiciona variante sem :80
-                            return List.of(orig, orig.replaceFirst(":80$", "")).stream();
-                        }
-                        return List.of(orig).stream();
-                    })
-                    .distinct()
-                    .toList();
+        // Lê origens permitidas de variável de ambiente ou usa valores padrão para desenvolvimento
+//        String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
+        String allowedOriginsEnv = null; // Desabilitado para teste local
+        if (allowedOriginsEnv != null && !allowedOriginsEnv.isEmpty()) {
+            // Suporta múltiplas origens separadas por vírgula
+            List<String> origins = Arrays.asList(allowedOriginsEnv.split(","));
+            configuracao.setAllowedOrigins(origins);
         } else {
-            allowedOrigins = List.of(
-                "http://localhost:5173",
-                "http://localhost:3000",
-                "http://localhost:8080",
-                "http://52.3.112.88",
-                "http://52.3.112.88:80",
-                "http://52.3.112.88:8080"
-            );
+            // Valores padrão para desenvolvimento local
+            configuracao.setAllowedOrigins(List.of(
+                    "http://localhost:5173",
+                    "http://localhost:3000",
+                    "http://localhost:8080",
+                    "http://52.3.112.88:80",
+                    "http://3.82.74.106:80"
+            ));
         }
 
-        registry.addMapping("/**")
-                .allowedOrigins(allowedOrigins.toArray(new String[0]))
-                .allowedMethods(
+        // Métodos HTTP permitidos
+        configuracao.setAllowedMethods(
+                Arrays.asList(
                         HttpMethod.GET.name(),
                         HttpMethod.POST.name(),
                         HttpMethod.PUT.name(),
                         HttpMethod.PATCH.name(),
                         HttpMethod.DELETE.name(),
-                        HttpMethod.OPTIONS.name()
-                )
-                .allowedHeaders(
-                        "Authorization",
-                        "Content-Type",
-                        "X-Requested-With",
-                        "Accept",
-                        "Origin",
-                        "Access-Control-Request-Method",
-                        "Access-Control-Request-Headers"
-                )
-                .exposedHeaders(
-                        HttpHeaders.CONTENT_DISPOSITION,
-                        "Authorization",
-                        "Content-Type",
-                        "Set-Cookie"
-                )
-                .allowCredentials(true)
-                .maxAge(3600);
+                        HttpMethod.OPTIONS.name(),
+                        HttpMethod.HEAD.name(),
+                        HttpMethod.TRACE.name()));
+
+        // Headers permitidos
+        configuracao.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        // Headers expostos para o frontend
+        configuracao.setExposedHeaders(Arrays.asList(
+                HttpHeaders.CONTENT_DISPOSITION,
+                "Authorization",
+                "Content-Type"
+        ));
+
+        // Tempo de cache para preflight requests
+        configuracao.setMaxAge(3600L);
+        UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
+        origem.registerCorsConfiguration("/**", configuracao);
+        return origem;
     }
 }
